--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+#featured-property figure {
+  text-align: center;
+}
+
+header nav a {
+  padding: 10px;
+  background-color: grey;
+  text-decoration: none; /* Removes underline from links */
+  color: white; /* Changes link text color */
+}
+
+#featured-property figcaption {
+  font-size: 15px;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: 20px auto;
+}
+
+#details div {
+  float: left;
+  width: 25%; /* Each div takes up 25% of the width */
+  text-align: center;
+  background-color: lightgrey; /* Set background color */
+}
